fixing overflow bug

--- a/styles/compile/prominent-features.sass
+++ b/styles/compile/prominent-features.sass
@@ -2,8 +2,6 @@
 
 article[is="prominent-feature"]
   background: $white
-  border-radius: $border-m
-  overflow: hidden 
 
   img
     width: 100%
